# xarm7

./: .gitignore  .gitmodules  .~lock.arm7_spinup_plan.odt#  arm7_spinup_plan.odt  input.md  launch_xarm7.sh  output.odt  pandoc_4_odt.sh
install/: local_setup.sh  setup.sh
install/mbot_demo/share/mbot_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/realsense_gazebo_plugin/share/realsense_gazebo_plugin/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/uf_ros_lib/share/uf_ros_lib/: package.dsv  package.sh  package.xml
install/xarm_api/include/xarm_api/: visibility_control.h  xarm_driver.h  xarm_msgs.h  xarm_ros_client.h
install/xarm_api/lib/xarm_api/: test_robot_states  test_xarm_ros_client  test_xarm_velo_move  xarm_driver_node
install/xarm_api/share/xarm_api/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/xarm_controller/share/xarm_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  uf_hardware_interface_plugins.xml
install/xarm_description/share/xarm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/xarm_gazebo/share/xarm_gazebo/: package.dsv  (+6 more)
log/: latest_build
src/my_xarm_scripts/: package.xml  setup.cfg  setup.py
src/my_xarm_scripts/my_xarm_scripts/: xarm_pose1.py  xarm_pose2.py
(+1391 files in other folders)
